web_tasker/static/mystyle.css
.mainmenubar {
    width: 140px;
    background: #ddd;
    padding: 5px;
    border: solid 2px black;
    float: right;
    top: 90px;
    left: 80%;
    position: absolute;
    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
}

#mainmenu {
    padding: 0;
    margin: 0;
    line-height: 0;
}

.mainmenuline {
    display: inline-block;
    line-height: 5px;
}

.mycontent {
    /*width: auto;
    background: #bbb;
    padding: 5px;
    padding-right: 20px; 
    float: center;
    margin: 10px;*/
    border: solid 1px black;
    min-height: 20%;
}

.index {
    width: 60%;
    background: #ccc;
    margin-left: 10%;
    height: 50%;
    margin-top: 5%;
}

.localmenu {
    width: 98%;
    left: 1%;
    padding: 0px;
    margin-top: -10px;
    box-shadow: 15px 15px 15px -10px rgba(0, 0, 0, 0.5);
}

.taskmenu {
    width: 98%;
    height: 52px;
    background: #ccc;
    left: 1%;
    margin-top: -10px;
    box-shadow: 15px 15px 15px -15px rgba(0, 0, 0, 0.5);
}

.taskmenu-elem {
    height: 10px;
}

.tasklist {
    width: 94%;
    margin-left: 4%;
}

.tasklistelement {
    margin-top: -20px;
    margin-bottom: -20px;
}

.taskview {
    margin-left: 80%;
    margin-right: 80%;
}

.task_name {
    width: 400px;
    font-family: monospace;
    border: 1px solid;
    resize: auto;
    white-space: pre-wrap;
    word-wrap: break-word;
}

.comments-section {
    background-color: #f0f0f0;
    box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.5);
}

#footer {
    width: auto; 
    background: #fc0; 
    clear: both;
    padding: 5px;
    border: solid 1px black;
    float: right;
    position: relative;
    /*top: 40px; */
    left: -70px;
    /*margin-top: -3em; */
    z-index: 20;
}

.local-title {
    background: #eee;
    margin: 100px;
    float: right;
}

.local-menu {
    width: 80%;
    background: #ccd;
    margin-top: -5%;
    float: center;
   /* padding: 5px;
    padding-right: 20px; 
    border: solid 1px black; 
    margin: 10px; */
}
.register_form, .login_form {
    width: 20%;
    background: #ccc;
}
.user_list {
    width: 250px;
    background: #ccc;
    padding: 5px;
    padding-right: 20px;
    border: solid 1px black;
    /*float: center; */
    margin: auto;
}

.container-fluid {
    height: 50px;
}

/* Gradient transparent - color - transparent */

.style-one {
    height: 12px;
    border: 0;
    box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.5);
}

.style-two {
    height: 12px;
    border: 0;
    box-shadow: inset 0 -12px 12px -12px rgba(0, 0, 0, 0.5);
}

h1 {
    text-align: center;
}

